<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/line"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/line"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_health"
            android:icon="@drawable/line"
            android:title="@string/health_fitness" />
        <item
            android:id="@+id/nav_resturamt"
            android:icon="@drawable/line"
            android:title="@string/restaurant" />
        <item
            android:id="@+id/nav_sports"
            android:icon="@drawable/line"
            android:title="@string/sports" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/line"
            android:title="@string/contact" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/line"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/line"
            android:title="@string/language" />
        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/line"
            android:title="@string/terms_conditions" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/line"
            android:title="@string/privacy_policy" />
        <item
            android:id="@+id/nav_cancellation"
            android:icon="@drawable/line"
            android:title="@string/cancellation_policy" />
    </group>


</menu>
