<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/splash" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shadow" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="22dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:scaleType="fitXY"
                android:src="@drawable/lock" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:text="@string/log_in"
                android:textColor="@color/colorDarkGray"
                android:textSize="22dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/curved_rectangle_trans_white_back"
                android:drawablePadding="10dp"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/edt_Pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/curved_rectangle_trans_white_back"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/txt_forgot_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/forget_password"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btn_SignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/blue_button"
                android:padding="12dp"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

            <LinearLayout
                android:id="@+id/linearSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/you_didn_t_have_an_account"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:layout_marginLeft="8dp"
                    android:textColor="@color/blue"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="22dp"
                    android:background="@color/blue"
                    android:orientation="horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/blue"
                    android:orientation="horizontal" />
            </LinearLayout>

            <Button
                android:id="@+id/btnGoogelSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/curved_red_back"
                android:padding="12dp"
                android:text="@string/sign_in_with_google"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:background="@drawable/cureved_blue_border_trans_back"
                android:gravity="center"
                android:padding="8dp"
                android:textSize="10dp"
                android:text="@string/skip"
                android:textColor="@color/colorWhite" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="60dp"
                android:src="@drawable/logo" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
    <include layout="@layout/loader"/>

</FrameLayout>
