<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <include layout="@layout/app_bar_main" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="22dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/edtCrntPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/curved_light_black_back"
                    android:hint="@string/current_password"
                    android:drawableLeft="@drawable/pwd"
                    android:inputType="textPassword"
                    android:drawablePadding="20dp"
                    android:padding="12dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="14dp" />
                <EditText
                    android:id="@+id/edNewPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/curved_light_black_back"
                    android:hint="@string/new_password"
                    android:drawableLeft="@drawable/pwd"
                    android:inputType="textPassword"
                    android:drawablePadding="20dp"
                    android:padding="12dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="14dp" />
                <EditText
                    android:id="@+id/edtConfirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/curved_light_black_back"
                    android:hint="@string/confirm_password"
                    android:drawableLeft="@drawable/pwd"
                    android:inputType="textPassword"
                    android:drawablePadding="20dp"
                    android:padding="12dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="14dp" />
                <Button
                    android:id="@+id/btn_Send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/curved_blue_back"
                    android:padding="12dp"
                    android:text="@string/update"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
</FrameLayout>