<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



<!--        <include-->
<!--            layout="@layout/app_bar_main"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content" />-->

        <FrameLayout
            android:id="@+id/fragment_contaner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.1">


        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:background="@color/colorWhite"></LinearLayout>
            <com.gauravk.bubblenavigation.BubbleNavigationConstraintView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_rect_white"
                android:elevation="0dp"
                android:padding="12dp"
                app:bnc_mode="spread"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.gauravk.bubblenavigation.BubbleToggleView
                    android:id="@+id/menu_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:bt_active="true"
                    app:bt_colorActive="@color/colorBlack"
                    app:bt_colorInactive="@color/colorBlack"
                    app:bt_icon="@drawable/home"
                    app:bt_padding="12dp"
                    app:bt_shape="@drawable/gradient_bottom_navigation"
                    app:bt_title="@string/home"
                    app:bt_titlePadding="8dp" />

                <com.gauravk.bubblenavigation.BubbleToggleView
                    android:id="@+id/menu_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:bt_colorActive="@color/colorBlack"
                    app:bt_colorInactive="@color/colorBlack"
                    app:bt_icon="@drawable/notification"
                    app:bt_padding="12dp"
                    app:bt_shape="@drawable/gradient_bottom_navigation"
                    app:bt_title="@string/alert"
                    app:bt_titlePadding="8dp" />

                <com.gauravk.bubblenavigation.BubbleToggleView
                    android:id="@+id/menu_booking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:bt_colorActive="@color/colorBlack"
                    app:bt_colorInactive="@color/colorBlack"
                    app:bt_icon="@drawable/booking"
                    app:bt_padding="12dp"
                    app:bt_shape="@drawable/gradient_bottom_navigation"
                    app:bt_title="@string/booking"
                    app:bt_titlePadding="8dp"/>
                <com.gauravk.bubblenavigation.BubbleToggleView
                    android:id="@+id/menu_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:bt_colorActive="@color/colorBlack"
                    app:bt_colorInactive="@color/colorBlack"
                    app:bt_icon="@drawable/user"
                    app:bt_padding="12dp"
                    app:bt_shape="@drawable/gradient_bottom_navigation"
                    app:bt_title="@string/profile"
                    app:bt_titlePadding="8dp"/>
            </com.gauravk.bubblenavigation.BubbleNavigationConstraintView>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:background="@drawable/splash"
        >



        <include layout="@layout/slid_menu" />
        <include layout="@layout/nav_header_main" />


    </LinearLayout>

    <!--</android.support.design.widget.NavigationView>-->
</android.support.v4.widget.DrawerLayout>
