<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/splash" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shadow" />
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="60dp"
        android:src="@drawable/logo" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="22dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/translate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:text="Select your Language"
                android:textColor="@color/colorDarkGray"
                android:textSize="22dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEnglish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/curved_blue_back"
                    android:hint="@string/english"
                    android:gravity="center"
                    android:layout_weight="0.1"
                    android:padding="6dp"
                    android:layout_marginRight="8dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="14dp" />

                <Button
                    android:id="@+id/btnArabic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/curved_rectangle_trans_white_back"
                    android:hint="@string/arabic"
                    android:layout_weight="0.1"
                    android:layout_marginLeft="8dp"
                    android:gravity="center"
                    android:padding="6dp"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="14dp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:background="@drawable/blue_button"
                android:padding="12dp"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />




        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</FrameLayout>
